# brush

./: refine_splats.py
crates/brush-bench-test/src/: reference.rs  training_bench.rs
crates/brush-cli/: Cargo.toml
crates/brush-cli/src/: lib.rs
crates/brush-dataset/src/: config.rs  scene.rs
crates/brush-dataset/src/formats/: colmap.rs
crates/brush-process/src/: config.rs  eval_export.rs  train_stream.rs
crates/brush-render-bwd/src/: burn_glue.rs
crates/brush-render/src/: burn_glue.rs  gaussian_splats.rs  kernels.rs  lib.rs  render.rs
crates/brush-render/src/shaders/: helpers.wgsl  project_visible.wgsl  rasterize.wgsl
crates/brush-train/src/: eval.rs  train.rs
