[package]
name = "brush-cli"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
brush-process.path = "../brush-process"
brush-vfs.path = "../brush-vfs"

tracing.workspace = true
tokio-stream.workspace = true
humantime.workspace = true
log.workspace = true
anyhow.workspace = true

[lints]
workspace = true
